--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/Archit Srivastava.jpg" class="img-fluid" alt="">
+            <img src="assets/img/Archit Srivastava.jpg" class="fade-up" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-up">
             <h3>Interests</h3>
             <p>
               I hope to pursue a career in tech, specifically in Software Engineering, Data Science/Analytics or Consulting.
