--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/Archit Srivastava.jpg" class="fade-up" alt="">
+            <img src="assets/img/Archit Srivastava.jpg" class="fade-in" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-up">
             <h3>Interests</h3>
