Made a few changes.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/code.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/code.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -104,23 +104,22 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>LinkedIn:</strong> <span>linkedin.com/in/architks/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Champaign, IL, USA</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BSc. in Systems Engineering</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>archits2@illinois.edu</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            I have prior professional experience in Data Analytics, Product Development, and Robotics. I am currently a student consultant at
+              Illinois Business Consulting where I am working with a farm credit cooperative to develop an automated dashboard for US exports.
+              I am also working at RailTEC CEE @ Illinois as a Software Engineer/Research Assistant. I am currently developing a webapp
+              to display dynamic graphs of train loads. I am also developing a model to predict deterioration of train wheels using AI and machine learning.
             </p>
           </div>
         </div>
@@ -182,7 +181,9 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I started coding when I was in 8th grade as part of the Robotics team. Ever since then, I've picked up new skills to further
+            myself as a programmer. I have professional or academic experience in all the languages below.
+          </p>
         </div>
 
         <div class="row skills-content">
@@ -190,9 +191,9 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">Python <i class="val">100%</i></span>
+              <span class="skill">Python <i class="val">95%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -248,58 +249,84 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I've studied and lived in India, Hong Kong, Singapore and the US which has given me a unique perspective on how I view the world.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Archit Srivastava</h4>
+              <p><em>Innovative and curious engineer with a background in computer science and consulting.</em></p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Champaign, Illinois, USA</li>
+                <li>archits2@illinois.edu</li>
               </ul>
             </div>
-
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Bachelor of Science in Systems Engineering and Design with a minor in Computer Science</h4>
+              <h5>2019 - 2023</h5>
+              <p><em>University of Illinois at Urbana-Champaign, Champaign, IL</em></p>
+              <p><b>Activities</b>:Illinois Business Consulting, Software Engineer @ RailTEC, HackIllinois</p>
+              <p><b>Coursework</b>: Data Structures, Analysis of Data, Linear Algebra with Computational Applications, Differential Equations, Intro to Modeling, Business Side of Engineering, Introductory Dynamics, Introductory Solid Mechanics</p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>High School Diploma</h4>
+              <h5>2018 - 2019</h5>
+              <p><em>Singapore American School, Singapore</em></p>
+              <p><b>Activities</b>: Head of Assembly for Robotics, Dive Trip Planner for Blue Planet Initiative</p>
+              <p><b>Coursework</b>: AP Physics C, AP Psychology, AT Computer Science: Data Structures, AP Calculus BC</p>
+            </div>
+            <div class="resume-item">
+              <h4>High School</h4>
+              <h5>2015 - 2018</h5>
+              <p><em>Hong Kong International School, Hong Kong</em></p>
+              <p><b>Activities</b>: Head of Software Design for Robotics, Leader of the Student Digital Leadership team, Cross Country, Track and Field</p>
+              <p><b>Coursework</b>: AP Computer Science, AP Microeconomics, AP Macroeconomics, AP Chemistry, AP Statistics, AP Environmental Science,</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Illinois Business Consulting - Consultant</h4>
+              <h5>Sep 2021 - Present</h5>
+              <p><em>Champaign, IL </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Working with a team of 7 to develop an automated dashboard for a Farm credit cooperative</li>
+                <li>Adapting client’s export study with external data sources and aggregating data for different commodities to develop a holistic dashboard.</li>
+                <li>Conducting interviews with stakeholders and end-users to design the interface according to their needs</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>RailTEC - Software Engineer</h4>
+              <h5>Sep 2021 - Present</h5>
+              <p><em>Champaign, IL</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Developing a webapp using Django to display real-time data of different trains</li>
+                <li>Analyzing historic train data to predict stock wheel maintenance needs using AI/ML.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>ANMsoft Technologies - Data Analyst Intern</h4>
+              <h5>Jun 2021 - Aug 2021</h5>
+              <p><em>Singapore</em></p>
+              <ul>
+                <li>Analyzed hotel data to predict occupancy patterns with respect to time, price, holidays etc. on over 1 million daily data entries and created a dashboard using Plotly with visualization of the trend reports (JavaScript, HTML, CSS, Python) </li>
+                <li>Replaced the legacy algorithm of data extraction with Google Analytics which was 5% faster (JavaScript, Python)</li>
+                <li>Reduced server load by pre-processing user data to streamline result calculations by up to 10 minutes per server  with a total of 166.7 hours saved daily </li>
+                <li>Improved user interface by increasing the first page matching rate by 20% for the search results </li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>HopeQure - Product Development Intern</h4>
+              <h5>May 2020 - Aug 2020</h5>
+              <p><em>Singapore</em></p>
+              <ul>
+                <li>Developed a go-to-market strategy to enter the US and Singaporean markets. </li>
+                <li>Leveraged speech recognition, sentiment analysis and topic modeling to develop a tailored counseling decision support  system to interpret users’ emotional and mental state (Python, PyTorch, SpeechRecognition) </li>
+                <li>Increased matching rate between end-user sessions and suggestions by 15% compared to the old model by contextualizing key phrases in a relational database</li>
+                <li>Expanded the language model by adding support for a local language and thereby increasing the potential audience by 20 million speakers</li>
               </ul>
             </div>
           </div>
@@ -313,11 +340,11 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Projects</h2>
+          <p>A few things I've worked on. </p>
         </div>
 
-        <div class="row" data-aos="fade-up">
+        <!--<div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
@@ -326,25 +353,25 @@
               <li data-filter=".filter-web">Web</li>
             </ul>
           </div>
-        </div>
+        </div>-->
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/SmallCopy.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+<!--                <a href="assets/img/portfolio/SmallCopy.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>-->
+                <a href="https://www.architks.live"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/TheExpansionEP.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+<!--                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>-->
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
