--- a/projects.html
+++ b/projects.html
@@ -46,22 +46,20 @@
 
       <div class="profile">
         <img src="assets/img/SmallCopy.jpeg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Archit Srivastva</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="mailto:archits2@illinois.edu" class="Email"><i class="bx bi-envelope"></i></a>
-          <a href="https://github.com/Architks1" class="Github"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/architks/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="mailto:archits2@illinois.edu" target="_blank" class="Email"><i class="bx bi-envelope"></i></a>
+          <a href="https://github.com/Architks1" target="_blank" class="Github"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/architks/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="index.html#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+          <li><a href="index.html#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="index.html#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+          <li><a href="index.html#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Projects</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -89,16 +87,14 @@
       <div class="container">
 
         <div class="row gy-4">
-
           <div class="col-lg-6">
             <div class="portfolio-details-slider swiper">
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/TheExpansionEP.jpg" alt="">
-                </div>
+              <div class="swiper-slide">
+                <img src="assets/img/portfolio/TheExpansionEP.jpg" alt="">
+              </div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
-
           <div class="col-lg-4">
             <div class="portfolio-info">
               <h3>Project information</h3>
