--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
               <img src="assets/img/portfolio/SmallCopy.jpeg" class="img-fluid" alt="">
               <div class="portfolio-links">
 <!--                <a href="assets/img/portfolio/SmallCopy.jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>-->
-                <a href="https://www.architks.live"><i class="bx bx-link"></i></a>
+                <a href="https://architks.live/"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
