--- a/projects.html
+++ b/projects.html
@@ -100,7 +100,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Project date</strong>: 08 May, 2019</li>
-                <li><strong>Project URL</strong>: <a href="#">soundcloud.com/dj-archie-9</a></li>
+                <li><strong>Project URL</strong>:<a href="https://soundcloud.com/dj-archie-9">SoundCloud</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
