Tweaked a few words

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <img src="assets/img/Archit Srivastava.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-up">
-            <h3>Interests</h3>
+            <h3>Career Interests</h3>
             <p>
               I hope to pursue a career in tech, specifically in Software Engineering, Data Science/Analytics or Consulting.
               <br> I am currently looking for internships in the summer of 2022.
