--- a/index.html
+++ b/index.html
@@ -228,14 +228,14 @@
               <h5>2018 - 2019</h5>
               <p><em>Singapore American School, Singapore</em></p>
               <p><b>Activities</b>: Head of Assembly for Robotics, Dive Trip Planner for Blue Planet Initiative</p>
-              <p><b>Coursework</b>: AP Physics C, AP Psychology, AT Computer Science: Data Structures, AP Calculus BC</p>
+              <p><b>Coursework</b>: AT Computer Science: Data Structures, AP Physics C, AP Psychology, AP Calculus BC</p>
             </div>
             <div class="resume-item">
               <h4>High School</h4>
               <h5>2015 - 2018</h5>
               <p><em>Hong Kong International School, Hong Kong</em></p>
               <p><b>Activities</b>: Head of Software Design for Robotics, Leader of the Student Digital Leadership team, Cross Country, Track and Field</p>
-              <p><b>Coursework</b>: AP Computer Science, AP Microeconomics, AP Macroeconomics, AP Chemistry, AP Statistics, AP Environmental Science,</p>
+              <p><b>Coursework</b>: AP Computer Science, AP Microeconomics, AP Macroeconomics, AP Chemistry, AP Statistics, AP Environmental Science</p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
